--- a/src/main/resources/static/apps/wenhao-javaw/output.css
+++ b/src/main/resources/static/apps/wenhao-javaw/output.css
@@ -1077,6 +1077,10 @@ video {
   justify-content: flex-start;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -1701,6 +1705,11 @@ video {
 
 .\[a-z_\:\.\\-\] {
   a-z_: .\-;
+}
+
+.hover\:bg-blue-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-blue-600:hover {
