--- a/src/main/resources/templates/lottoManagement.html
+++ b/src/main/resources/templates/lottoManagement.html
@@ -114,7 +114,7 @@
         <div class="flex justify-between items-center mb-6">
             <h2 class="text-xl font-semibold">Lotto</h2>
             <div class="flex items-center">
-                <input type="search" placeholder="Search" class="border-2 border-gray-300 bg-white h-10 px-5 pr-16 rounded-lg text-sm focus:outline-none">
+                <input id="searchInput" type="search" placeholder="Search Name" class="border-2 border-gray-300 bg-white h-10 px-5 pr-16 rounded-lg text-sm focus:outline-none">
                 <button class="create-flow-btn ml-4 text-sm bg-gray-200 hover:bg-gray-300 text-gray-800 font-semibold py-2 px-4 rounded-lg">
                     <i class="fas fa-plus mr-2"></i> Create Lotto
                 </button>
@@ -238,65 +238,85 @@
 
 <script>
     document.addEventListener('DOMContentLoaded', function () {
-
-        // Initial page load
-        fetchPaginationData(1);
-
-        // Function to fetch pagination data
-        function fetchPaginationData(pageNum) {
-            fetch(`/apps/wenhao-javaw/lotto/history?pageNum=${pageNum}&pageSize=10`)
-                .then(response => response.json())
+        document.getElementById('searchInput').addEventListener('blur', function() {
+            // 获取输入框中的值
+            var name = this.value.trim();
+            // 构造URL
+            var url = '/apps/wenhao-javaw/lotto/history?name=' + encodeURIComponent(name) + '&pageNum=1&pageSize=10';
+            // 发送请求
+            fetch(url) .then(response => response.json())
                 .then(data => {
                     updatePaginationControls(data)
                     data=data.list
-                    // 将获取到的数据追加到 tableData 数组中
-                    tableData.length = 0; // Clear existing data in tableData array.
-
-                    data.forEach(item => {
-                        item.updateTime = "25/01/2024";
-                        item.createTime = "25/01/2024";
-                        item.send_flag = item.send_flag === 1 ?
-                            "<i class='fas fa-envelope-open-text text-blue-500'></i>" : // 已发送使用蓝色信封图标
-                            "<i class='fas fa-envelope text-gray-400'></i>"; // 未发送使用灰色信封图标
-                        item.actions = "<a href='#' class='edit-btn text-indigo-600 hover:text-indigo-900'>Edit</a> <span style='margin-left: 8px;'>" +
-                            "<a href='https://www.lottery.gov.cn/tool/dltjsq.jspx/' target='_blank' class='open-btn text-gray-600 hover:text-gray-900'><i class='fas fa-external-link-alt'></i></a></span>";
-                        // 将更新后的数据添加到 tableData 数组中
-                        tableData.push(item);
-                    });
-                    // 在这里对数据进行渲染等操作
-                    const tableBody = document.querySelector('.table-auto tbody');
-                    while (tableBody.firstChild) {
-                        tableBody.removeChild(tableBody.firstChild);
-                    }
-
-                    const columnOrder = ['period', 'name', 'number', 'result', 'send_flag', 'time', 'updateTime', 'createTime', 'actions']; // 根据需要调整这个顺序
-
-                    tableData.forEach((row, index) => {
-                        const tr = document.createElement('tr');
-                        tr.className = index % 2 === 0 ? 'bg-white' : 'bg-gray-50';
-
-                        columnOrder.forEach(key => {
-                            if (key !== 'id') {
-                                const td = document.createElement('td');
-                                td.className = 'px-6 py-4 whitespace-nowrap text-sm text-gray-500';
-                                if (key === 'actions' || key === 'send_flag') { // 对于 actions 和 send_flag 列，我们将使用 innerHTML 来插入内容
-                                    td.className = 'px-6 py-4 whitespace-nowrap text-sm font-medium';
-                                    td.innerHTML = row[key];
-                                } else if (key === 'time' && row[key]) {
-                                    td.textContent = row[key].substring(0, 10);
-                                } else {
-                                    td.textContent = row[key];
-                                }
-                                tr.appendChild(td);
-                            }
-                        });
-
-                        tableBody.appendChild(tr);
-                    });
+                    tableDataRender(data)
                 })
                 .catch(error => {
                     console.error('Error fetching data:', error);
                 });
+        });
+
+        // Initial page load
+        fetchPaginationData(1,"");
+
+        // Function to fetch pagination data
+        function fetchPaginationData(pageNum,name) {
+            fetch(`/apps/wenhao-javaw/lotto/history?pageNum=${pageNum}&pageSize=10&name=${name}`)
+                .then(response => response.json())
+                .then(data => {
+                    updatePaginationControls(data)
+                    data=data.list
+                    tableDataRender(data)
+                })
+                .catch(error => {
+                    console.error('Error fetching data:', error);
+                });
+        }
+
+        function tableDataRender (data){
+            // 将获取到的数据追加到 tableData 数组中
+            tableData.length = 0; // Clear existing data in tableData array.
+
+            data.forEach(item => {
+                item.updateTime = "25/01/2024";
+                item.createTime = "25/01/2024";
+                item.send_flag = item.send_flag === 1 ?
+                    "<i class='fas fa-envelope-open-text text-blue-500'></i>" : // 已发送使用蓝色信封图标
+                    "<i class='fas fa-envelope text-gray-400'></i>"; // 未发送使用灰色信封图标
+                item.actions = "<a href='#' class='edit-btn text-indigo-600 hover:text-indigo-900'>Edit</a> <span style='margin-left: 8px;'>" +
+                    "<a href='https://www.lottery.gov.cn/tool/dltjsq.jspx/' target='_blank' class='open-btn text-gray-600 hover:text-gray-900'><i class='fas fa-external-link-alt'></i></a></span>";
+                // 将更新后的数据添加到 tableData 数组中
+                tableData.push(item);
+            });
+            // 在这里对数据进行渲染等操作
+            const tableBody = document.querySelector('.table-auto tbody');
+            while (tableBody.firstChild) {
+                tableBody.removeChild(tableBody.firstChild);
+            }
+
+            const columnOrder = ['period', 'name', 'number', 'result', 'send_flag', 'time', 'updateTime', 'createTime', 'actions']; // 根据需要调整这个顺序
+
+            tableData.forEach((row, index) => {
+                const tr = document.createElement('tr');
+                tr.className = index % 2 === 0 ? 'bg-white' : 'bg-gray-50';
+
+                columnOrder.forEach(key => {
+                    if (key !== 'id') {
+                        const td = document.createElement('td');
+                        td.className = 'px-6 py-4 whitespace-nowrap text-sm text-gray-500';
+                        if (key === 'actions' || key === 'send_flag') { // 对于 actions 和 send_flag 列，我们将使用 innerHTML 来插入内容
+                            td.className = 'px-6 py-4 whitespace-nowrap text-sm font-medium';
+                            td.innerHTML = row[key];
+                        } else if (key === 'time' && row[key]) {
+                            td.textContent = row[key].substring(0, 10);
+                        } else {
+                            td.textContent = row[key];
+                        }
+                        tr.appendChild(td);
+                    }
+                });
+
+                tableBody.appendChild(tr);
+            });
         }
 
         // Update pagination controls based on fetched data
@@ -364,7 +384,8 @@
             button.className = `inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md shadow-sm ${isActive ? 'bg-blue-500 text-white' : 'text-blue-700 bg-white hover:bg-blue-50'} transition duration-150 ease-in-out`;
             button.addEventListener('click', function(event) {
                 event.preventDefault();
-                fetchPaginationData(pageNum);
+                var name = document.getElementById('searchInput').value
+                fetchPaginationData(pageNum,name);
             });
             return button;
         }
